--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "title": "Proper Indent",
     "description": "Hack on multiple diverse projects at the same time? Each using different indent? This extension will save you a lot of time switching your Brackets indent settings.",
     "homepage": "https://github.com/busykai/brackets-indent-right",
-    "version": "0.0.5",
-    "author": "Arzhan \"kai\" Kinzhalin (https://github.com/busykai)",
+    "version": "0.0.6",
+    "author": "Intel Corporation",
     "license": "MIT",
     "engines": {
         "brackets": ">=0.36.0"
